create and style Main page

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
 footer {
   display: flex;
   justify-content: center;
@@ -8,8 +9,7 @@ footer {
   font-weight: 300;
   font-size: 14px;
 }
-
 footer a {
   text-decoration: none;
   color: black;
-}/*# sourceMappingURL=App.css.map */
+}
