add style for GPT arena

--- a/src/variables/Variables.scss
+++ b/src/variables/Variables.scss
@@ -4,6 +4,8 @@
 $white: white;
 $background-gradient-start: #E43F6F;
 $background-gradient-end: #FFCF56;
+$pink: #E43F6F;
+$yellow: #FFCF56;
 
 // Fonts
 $font: 'Montserrat', Courier, monospace;
