--- a/src/styles/GptArena.css
+++ b/src/styles/GptArena.css
@@ -1,1 +1,72 @@
-/*# sourceMappingURL=GptArena.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+.main-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(#E43F6F, #FFCF56);
+  height: 90vh;
+}
+.main-page header {
+  font-family: "Montserrat", Courier, monospace;
+  font-weight: 600;
+  font-size: 2.5rem;
+  color: white;
+  margin-bottom: 1rem;
+}
+.main-page .gpt-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+.main-page .gpt-container .container {
+  width: 40vw;
+  height: 60vh;
+  background: white;
+  padding: 2rem;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main-page .gpt-container h2 {
+  margin-bottom: 10px;
+  font-family: "Montserrat", Courier, monospace;
+  font-weight: 600;
+  font-size: 20px;
+  color: #E43F6F;
+}
+.main-page .gpt-container p {
+  font-family: "Montserrat", Courier, monospace;
+  font-weight: 300;
+  font-size: 14px;
+}
+.main-page .message-chat-gpt {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  width: 30vw;
+  border-radius: 20px;
+  padding-right: 20px;
+}
+.main-page .message-chat-gpt input {
+  flex-grow: 1;
+  border: none;
+  outline: none;
+  padding: 20px;
+  font-size: 16px;
+  background: transparent;
+}
+.main-page .message-chat-gpt input::-moz-placeholder {
+  color: rgba(0, 0, 0, 0.5);
+}
+.main-page .message-chat-gpt input::placeholder {
+  color: rgba(0, 0, 0, 0.5);
+}
+.main-page .message-chat-gpt .send {
+  cursor: pointer;
+}
+.main-page .message-chat-gpt .send:hover {
+  opacity: 0.8;
+}/*# sourceMappingURL=GptArena.css.map */
