--- a/src/styles/GptArena.scss
+++ b/src/styles/GptArena.scss
@@ -43,7 +43,8 @@
         p{
             font-family: $font;
             font-weight: $textfont;
-            font-size: 14px;
+            padding: 25px 50px;
+            font-size: 16px;
         }
     }
 
