--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 .mainPage {
-  width: 100%;
-  height: 700px;
+  height: 87vh;
   padding-top: 50px;
   padding-left: 120px;
   display: flex;
