--- a/src/styles/MainPage.scss
+++ b/src/styles/MainPage.scss
@@ -1,8 +1,7 @@
 @import '../variables/Variables.scss';
 
 .mainPage {
-    width: 100%;
-    height: 700px;
+    height: 87vh;
     padding-top: 50px;
     padding-left: 120px;
     display: flex;
@@ -10,7 +9,6 @@
     justify-content: space-between;
     align-items: center;
     background: linear-gradient($background-gradient-start, $background-gradient-end);
-
 
     .container {
         font-family: $font;
