--- a/src/styles/GptArena.scss
+++ b/src/styles/GptArena.scss
@@ -40,16 +40,20 @@
             color: $pink;
         }
 
-        markdown-content{
+        .markdown-content{
             font-family: $font;
             font-weight: $textfont;
             text-align: start;
             padding: 5px 20px;
             font-size: 16px;
-            line-height: 1.6;
-            overflow-y: auto;
-            max-height: 500px;
+            line-height: 1.15;
+            overflow: auto;
+            height: 100%;
         }
+        .markdown-content code {
+            color: $pink;
+            background: $yellow;
+          }
     }
 
     .message-chat-gpt {
