--- a/src/styles/MainPage.scss
+++ b/src/styles/MainPage.scss
@@ -26,14 +26,24 @@
 
             button {
                 color: $white;
-                width: 80px;
+                width: 100px;
                 height: 35px;
                 font-weight: $textfont;
                 font-size: 18px;
+                display: inline-flex;
+                align-items: center; 
                 text-align: left;
                 background: transparent;
+                justify-content: center;
+                gap: 10px;
                 border: 0.5px solid;
-                border-radius: 5px;
+                border-radius: 5px; 
+                cursor: pointer;       
+
+                .arrow {
+                    width: 15px;
+                    height: auto;
+                }
             }
     
             a {
@@ -44,7 +54,6 @@
             }
         }
     }
-        
         
     img {
         width: 40%;
