--- a/src/variables/Variables.scss
+++ b/src/variables/Variables.scss
@@ -6,6 +6,7 @@ $background-gradient-start: #E43F6F;
 $background-gradient-end: #FFCF56;
 $pink: #E43F6F;
 $yellow: #FFCF56;
+$gray: #D9D9D9;
 
 // Fonts
 $font: 'Montserrat', Courier, monospace;
