--- a/src/styles/GptArena.css
+++ b/src/styles/GptArena.css
@@ -45,17 +45,19 @@
   line-height: 1.15;
   overflow: auto;
   height: 100%;
+  width: 100%;
 }
 .main-page .gpt-container .markdown-content code {
+  font-size: small;
   color: #E43F6F;
-  background: #FFCF56;
+  background: #D9D9D9;
 }
 .main-page .message-chat-gpt {
   margin-top: 20px;
   display: flex;
   justify-content: center;
   border: 1px solid black;
-  width: 30vw;
+  width: 45vw;
   height: 5vh;
   border-radius: 10px;
   padding-right: 6px;
