--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -24,14 +24,23 @@
 }
 .mainPage .container .navigation button {
   color: white;
-  width: 80px;
+  width: 100px;
   height: 35px;
   font-weight: 300;
   font-size: 18px;
+  display: inline-flex;
+  align-items: center;
   text-align: left;
   background: transparent;
+  justify-content: center;
+  gap: 10px;
   border: 0.5px solid;
   border-radius: 5px;
+  cursor: pointer;
+}
+.mainPage .container .navigation button .arrow {
+  width: 15px;
+  height: auto;
 }
 .mainPage .container .navigation a {
   padding-left: 20px;
