--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,6 @@ footer a {
   text-decoration: none;
   color: black;
 }/*# sourceMappingURL=App.css.map */
+@media screen and (max-width: 1200px) and (min-width:300px){
+
+}
