--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,15 @@ footer {
   font-family: "Montserrat", Courier, monospace;
   font-weight: 300;
   font-size: 14px;
+  
 }
 
 footer a {
   text-decoration: none;
   color: black;
 }/*# sourceMappingURL=App.css.map */
-@media screen and (max-width: 1200px) and (min-width:300px){
-
+@media screen and (max-width: 1000px) and (min-width:768px){
+ footer{
+  font-size: 30px;
+ }  
 }
