--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -54,20 +54,23 @@
   height: 90%;
   padding-right: 0px;
 }/*# sourceMappingURL=MainPage.css.map */
+
 @media screen and (max-width: 1200px) and (min-width:300px){
   .mainPage{
     display: flex;
     flex-direction: column;
-    height: 55rem;
+   
   }
+  
   .mainPage .container h1{
-    margin-left: -30%;
-    margin-top: -5%;
+    margin-left: -32%;
+    margin-top: -8%;
+     font-size: 22px;
   }
   .mainPage .container .navigation{
    
     margin-left: -35%;
-    margin-top: -10%;
+    margin-top: -6%;
     width:130%
   }
   .mainPage .container .navigation button{
@@ -85,41 +88,70 @@
   margin-left: -5%;
 }
 }
-@media screen and (max-width: 400px) and (min-width:390px){
+@media screen and (max-width: 390px) and (min-width:375px){
+   .mainPage .container h1{
+    margin-left: -33%;
+    margin-top: -7%;
+     
+  }
+  .mainPage{
+    height: 35rem;
+  }
+}
+@media screen and (max-width: 412px) and (min-width:390px){
+   .mainPage .container h1{
+    margin-left: -33%;
+    margin-top: -7%;
+     
+  }
+  .mainPage{
+    height: 46rem;
+  }
+}
+
+@media screen and (max-width: 430px) and (min-width:412px){
+   .mainPage .container h1{
+    margin-left: -27%;
+    margin-top: -8%;
+    font-size: 25px;
+  }
+  .mainPage{
+    height: 50rem;
+  }
+  .mainPage .container .navigation button{
+    margin-left: 22%;
+    margin-top: 3%;
+  }
+}
+@media screen and (max-width: 450px) and (min-width:430px){
    .mainPage .container h1{
     margin-left: -25%;
-    margin-top: -5%;
+    margin-top: -8%;
+    font-size: 25px;
+  }
+  .mainPage{
+    height: 52rem;
+  }
+  
+  .mainPage .container .navigation button{
+    margin-left: 24%;
+    margin-top: 3%;
   }
 }
-@media screen and (max-width: 370px) and (min-width:360px){
+
+@media screen and (max-width: 1000px) and (min-width:768px){
    .mainPage .container h1{
-    margin-left: -30.5%;
-    margin-top: -5%;
-  }
-}
-@media screen and (max-width: 1024px) and (min-width:768px){
-   .mainPage .container h1{
-    margin-left: -9%;
-    margin-top: -5%;
-  }
-   .mainPage .container .navigation button{
-    margin-left: 45%;
-    
-  }
-  .mainPage .container .navigation{
-   
-    margin-left: -25%;
-    margin-top: -5%;
-    width:130%
-  }
-}
-@media screen and (max-width: 1024px) and (min-width:540px){
-    .mainPage .container h1{
     margin-left: -15%;
     margin-top: -5%;
+    font-size: 35px;
   }
+  .mainPage{
+    
+    
+  }
+ 
    .mainPage .container .navigation button{
-    margin-left: 25%;
+    margin-left: 30%;
     
   }
   .mainPage .container .navigation{
@@ -129,19 +161,23 @@
     width:130%
   }
 }
-@media screen and (max-width: 1100px) and (min-width:1024px){
-   .mainPage .container h1{
-    margin-left: -9%;
-    margin-top: -5%;
+
+@media screen and (max-width: 1124px) and (min-width:912px){
+    .mainPage .container h1{
+    margin-left: -10%;
+    margin-top: 0%;
+    font-size: 45px;
   }
-   .mainPage .container .navigation button{
-    margin-left: 40%;
+  .mainPage{
+    height: 78rem;
     
   }
+
+
   .mainPage .container .navigation{
    
-    margin-left: -25%;
-    margin-top: -5%;
+    margin-left: -20%;
+    margin-top: -2%;
     width:130%
   }
 }
