--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -63,10 +63,13 @@
   }
   
   .mainPage .container h1{
-    margin-left: -32%;
+    
     margin-top: -8%;
      font-size: 22px;
+     text-align: left;
+    
   }
+   
   .mainPage .container .navigation{
    
     margin-left: -35%;
@@ -74,8 +77,8 @@
     width:130%
   }
   .mainPage .container .navigation button{
-    margin-left: 15%;
     
+    margin-left: 28%;
   }
   .mainPage img {
   width: 160%;
@@ -90,9 +93,13 @@
 }
 @media screen and (max-width: 390px) and (min-width:375px){
    .mainPage .container h1{
-    margin-left: -33%;
+    text-align: left;
     margin-top: -7%;
-     
+  
+  }
+  .mainPage .container{
+    margin-left: -65%;
+   
   }
   .mainPage{
     height: 35rem;
@@ -100,58 +107,69 @@
 }
 @media screen and (max-width: 412px) and (min-width:390px){
    .mainPage .container h1{
-    margin-left: -33%;
+    text-align: left;
     margin-top: -7%;
      
   }
   .mainPage{
     height: 46rem;
   }
+  .mainPage .container{
+    margin-left: -50%;
+   
+  }
 }
 
 @media screen and (max-width: 430px) and (min-width:412px){
    .mainPage .container h1{
-    margin-left: -27%;
+   text-align: left;
     margin-top: -8%;
     font-size: 25px;
   }
   .mainPage{
     height: 50rem;
   }
+  .mainPage .container{
+    margin-left: -50%;
+   
+  }
   .mainPage .container .navigation button{
-    margin-left: 22%;
+    margin-left: 28%;
     margin-top: 3%;
   }
 }
 @media screen and (max-width: 450px) and (min-width:430px){
    .mainPage .container h1{
-    margin-left: -25%;
+  text-align: left;
     margin-top: -8%;
     font-size: 25px;
   }
   .mainPage{
     height: 52rem;
   }
-  
+  .mainPage .container{
+    margin-left: -50%;
+   
+  }
   .mainPage .container .navigation button{
-    margin-left: 24%;
+    margin-left: 28%;
     margin-top: 3%;
   }
 }
 
 @media screen and (max-width: 1000px) and (min-width:768px){
    .mainPage .container h1{
-    margin-left: -15%;
+    text-align: left;
     margin-top: -5%;
     font-size: 35px;
   }
-  .mainPage{
-    
-    
+  .mainPage .container{
+    margin-left: -50%;
+   
   }
  
    .mainPage .container .navigation button{
-    margin-left: 30%;
+    margin-left: 20%;
     
   }
   .mainPage .container .navigation{
@@ -164,7 +182,7 @@
 
 @media screen and (max-width: 1124px) and (min-width:912px){
     .mainPage .container h1{
-    margin-left: -10%;
+    text-align: left;
     margin-top: 0%;
     font-size: 45px;
   }
@@ -172,12 +190,26 @@
     height: 78rem;
     
   }
-
+.mainPage .container{
+    margin-left: -45%;
+   
+  }
 
   .mainPage .container .navigation{
    
-    margin-left: -20%;
+    margin-left: -34%;
     margin-top: -2%;
     width:130%
   }
 }
+@media screen and (max-width: 1124px) and (min-width:912px){
+    
+
+  .mainPage .container .navigation{
+   
+    margin-left: -25%;
+    margin-top: -2%;
+    width:130%
+  }
+}
+
